--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="%PUBLIC_URL%/Logo.svg" />
+    <title>SFI CARE</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="SFI CARE is a medical learning program, a subsidiary of EDUCONSULT (educational institute). We are based in Ibadan, Oyo state, Nigeria. We offer diploma and certificate courses on health and wellness that are relevant internationally, and issued by NHCPS."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sficare.vercel.app">
+    <meta property="og:title" content="SFI-CARE">
+    <meta property="og:description" content="SFI CARE is a medical learning program, a subsidiary of EDUCONSULT (educational institute). We are based in Ibadan, Oyo state, Nigeria. We offer diploma and certificate courses on health and wellness that are relevant internationally, and issued by NHCPS.">
+    <meta property="og:image" content="%PUBLIC_URL%/Logo.svg">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sficare.vercel.app">
+    <meta property="twitter:title" content="SFI_CARE">
+    <meta property="twitter:description" content="SFI CARE is a medical learning program, a subsidiary of EDUCONSULT (educational institute). We are based in Ibadan, Oyo state, Nigeria. We offer diploma and certificate courses on health and wellness that are relevant internationally, and issued by NHCPS.">
+    <meta property="twitter:image" content="%PUBLIC_URL%/Logo.svg">
+
+  
+   
+    <title>SFICARE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
